oxiplate-derive/tests/broken/ascii-escape-span.stderr
error: Expected an expression.
 --> tests/broken/ascii-escape-span.rs:4:30
  |
4 | #[oxiplate_inline = "hello\n{{"]
  |                              ^
